Adds a nice meme

--- a/_posts/0000-01-02-oquijasi.md
+++ b/_posts/0000-01-02-oquijasi.md
@@ -3,4 +3,4 @@ layout: slide
 title: "Welcome to our second slide!"
 ---
 Hi! ~ _A. Quijano_
-Use the left arrow to go back!
+![a good meme](https://i.imgur.com/8DtNQMv.jpg)
